:bug: use immutable list